--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-2.30MB/s(Youtube:不良林), server: 213.183.51.172, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林), server: 213.183.53.200, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇳🇱 荷兰-2.16MB/s(Youtube:不良林), server: 213.183.59.206, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
-  - {name: 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林), server: 213.183.53.200, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 波兰-2.05MB/s(Youtube:不良林), server: 217.30.10.66, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 波兰-1.76MB/s(Youtube:不良林), server: 217.30.10.63, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 波兰-1.79MB/s(Youtube:不良林), server: 217.30.10.66, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 波兰-1.65MB/s(Youtube:不良林), server: 217.30.10.68, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 波兰-1.57MB/s(Youtube:不良林), server: 217.30.10.63, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 保加利亚-860.5KB/s(Youtube:不良林), server: 213.183.63.221, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇳🇱 荷兰-1.71MB/s(Youtube:不良林), server: 213.183.51.171, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇺🇸 美国-2.95MB/s(Youtube:不良林), server: 38.68.134.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇳🇱 荷兰-2.15MB/s(Youtube:不良林), server: 213.183.51.172, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林), server: 213.183.53.179, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-2.92MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-883.7KB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.98MB/s(Youtube:不良林), server: 169.197.142.39, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 波兰-2.05MB/s(Youtube:不良林)
-      - 波兰-1.76MB/s(Youtube:不良林)
-      - 波兰-1.79MB/s(Youtube:不良林)
-      - 波兰-1.65MB/s(Youtube:不良林)
-      - 波兰-1.57MB/s(Youtube:不良林)
+      - 保加利亚-860.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 波兰-2.05MB/s(Youtube:不良林)
-      - 波兰-1.76MB/s(Youtube:不良林)
-      - 波兰-1.79MB/s(Youtube:不良林)
-      - 波兰-1.65MB/s(Youtube:不良林)
-      - 波兰-1.57MB/s(Youtube:不良林)
+      - 保加利亚-860.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 波兰-2.05MB/s(Youtube:不良林)
-      - 波兰-1.76MB/s(Youtube:不良林)
-      - 波兰-1.79MB/s(Youtube:不良林)
-      - 波兰-1.65MB/s(Youtube:不良林)
-      - 波兰-1.57MB/s(Youtube:不良林)
+      - 保加利亚-860.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 波兰-2.05MB/s(Youtube:不良林)
-      - 波兰-1.76MB/s(Youtube:不良林)
-      - 波兰-1.79MB/s(Youtube:不良林)
-      - 波兰-1.65MB/s(Youtube:不良林)
-      - 波兰-1.57MB/s(Youtube:不良林)
+      - 保加利亚-860.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 波兰-2.05MB/s(Youtube:不良林)
-      - 波兰-1.76MB/s(Youtube:不良林)
-      - 波兰-1.79MB/s(Youtube:不良林)
-      - 波兰-1.65MB/s(Youtube:不良林)
-      - 波兰-1.57MB/s(Youtube:不良林)
+      - 保加利亚-860.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 波兰-2.05MB/s(Youtube:不良林)
-      - 波兰-1.76MB/s(Youtube:不良林)
-      - 波兰-1.79MB/s(Youtube:不良林)
-      - 波兰-1.65MB/s(Youtube:不良林)
-      - 波兰-1.57MB/s(Youtube:不良林)
+      - 保加利亚-860.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 波兰-2.05MB/s(Youtube:不良林)
-      - 波兰-1.76MB/s(Youtube:不良林)
-      - 波兰-1.79MB/s(Youtube:不良林)
-      - 波兰-1.65MB/s(Youtube:不良林)
-      - 波兰-1.57MB/s(Youtube:不良林)
+      - 保加利亚-860.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
