--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 保加利亚-860.5KB/s(Youtube:不良林), server: 213.183.63.221, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇳🇱 荷兰-1.71MB/s(Youtube:不良林), server: 213.183.51.171, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 🇺🇸 美国-2.95MB/s(Youtube:不良林), server: 38.68.134.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇳🇱 荷兰-2.15MB/s(Youtube:不良林), server: 213.183.51.172, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林), server: 213.183.53.179, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇳🇱 荷兰-719.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林), server: 213.183.53.214, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林), server: 213.183.53.208, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇯🇵 日本-476.2KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-2.92MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-883.7KB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-860.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-719.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-476.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 保加利亚-860.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-719.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-476.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-860.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-719.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-476.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 保加利亚-860.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-719.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-476.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 保加利亚-860.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-719.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-476.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-860.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-719.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-476.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-860.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-719.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-476.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
