--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇳🇱 荷兰-719.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
-  - {name: 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林), server: 213.183.53.214, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林), server: 213.183.53.208, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇯🇵 日本-476.2KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-2.24MB/s(Youtube:不良林), server: 213.183.59.206, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林), server: 213.183.53.202, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 波兰-1.53MB/s(Youtube:不良林), server: 217.30.10.66, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇩🇪 德国-2.01MB/s(Youtube:不良林), server: 5.183.179.141, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇺🇸 美国-2.64MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-2.92MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-883.7KB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.45MB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.98MB/s(Youtube:不良林), server: 169.197.142.39, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-719.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-476.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-719.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-476.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-719.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-476.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-719.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-476.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-719.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-476.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-719.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-476.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-4.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-719.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-476.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
