--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: 167.88.63.82, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林), server: 185.167.116.38, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇺🇸 美国-2.60MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: 38.68.135.18, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇷🇺 俄罗斯联邦-722.3KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 波兰-1.65MB/s(Youtube:不良林), server: 217.30.10.68, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 保加利亚-1.01MB/s(Youtube:不良林), server: 213.183.63.221, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 保加利亚-2.88MB/s(Youtube:不良林), server: 213.183.63.221, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 保加利亚-711.5KB/s(Youtube:不良林), server: 213.183.63.217, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
   - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-3.54MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-883.7KB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-722.3KB/s(Youtube:不良林)
+      - 波兰-1.65MB/s(Youtube:不良林)
+      - 保加利亚-1.01MB/s(Youtube:不良林)
+      - 保加利亚-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林)
+      - 保加利亚-711.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-722.3KB/s(Youtube:不良林)
+      - 波兰-1.65MB/s(Youtube:不良林)
+      - 保加利亚-1.01MB/s(Youtube:不良林)
+      - 保加利亚-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林)
+      - 保加利亚-711.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-722.3KB/s(Youtube:不良林)
+      - 波兰-1.65MB/s(Youtube:不良林)
+      - 保加利亚-1.01MB/s(Youtube:不良林)
+      - 保加利亚-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林)
+      - 保加利亚-711.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-722.3KB/s(Youtube:不良林)
+      - 波兰-1.65MB/s(Youtube:不良林)
+      - 保加利亚-1.01MB/s(Youtube:不良林)
+      - 保加利亚-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林)
+      - 保加利亚-711.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-722.3KB/s(Youtube:不良林)
+      - 波兰-1.65MB/s(Youtube:不良林)
+      - 保加利亚-1.01MB/s(Youtube:不良林)
+      - 保加利亚-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林)
+      - 保加利亚-711.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-722.3KB/s(Youtube:不良林)
+      - 波兰-1.65MB/s(Youtube:不良林)
+      - 保加利亚-1.01MB/s(Youtube:不良林)
+      - 保加利亚-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林)
+      - 保加利亚-711.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-722.3KB/s(Youtube:不良林)
+      - 波兰-1.65MB/s(Youtube:不良林)
+      - 保加利亚-1.01MB/s(Youtube:不良林)
+      - 保加利亚-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-588.3KB/s(Youtube:不良林)
+      - 保加利亚-711.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-883.7KB/s(Youtube:不良林)
